--- a/app/src/main/res/layout/floating_image_layout.xml
+++ b/app/src/main/res/layout/floating_image_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/floating_image"
+        android:id="@+id/floating_image_view"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/pin" />
