--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,4 +6,16 @@
         <item>500,600</item>
         <!-- Add more positions if needed -->
     </string-array>
+    <string-array name="Naver_search">
+        <item>300,500</item>
+        <item>300,1150</item>
+
+        <!-- Add more positions if needed -->
+    </string-array>
+    <string-array name="Naver_search_image">
+        <item>pin</item>
+        <item>textBox1</item>
+
+        <!-- Add more positions if needed -->
+    </string-array>
 </resources>
