--- a/app/src/main/res/layout/floating_image_layout.xml
+++ b/app/src/main/res/layout/floating_image_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <!--
     <ImageView
@@ -10,11 +11,6 @@
         android:layout_height="100dp"
         android:src="@drawable/pin" />
     기본 이미지-->
-    <ImageView
-        android:id="@+id/textBox1"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/Text_Box1" />
 
     <ImageView
         android:id="@+id/pin"
@@ -22,5 +18,12 @@
         android:layout_height="100dp"
         android:src="@drawable/pin" />
 
+    <ImageView
+        android:id="@+id/textBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:src="@drawable/testbox_one" />
 
-</FrameLayout>
+
+
+</LinearLayout>
