--- a/app/src/main/res/layout/floating_image_layout.xml
+++ b/app/src/main/res/layout/floating_image_layout.xml
@@ -16,11 +16,18 @@
         android:layout_height="100dp"
         android:src="@drawable/testbox1" />
 
-    <ImageView
-        android:id="@+id/pin"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/pin" />
+    <FrameLayout android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/pin"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/pin" />
+
+
+    </FrameLayout>
 
 
 </FrameLayout>
