--- a/app/src/main/res/layout/activity_seacrh.xml
+++ b/app/src/main/res/layout/activity_seacrh.xml
@@ -9,6 +9,8 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:hint="검색어를 입력하세요"
+        android:inputType="text"
+        android:imeOptions="actionSearch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
