--- a/app/src/main/res/layout/layout_bubble.xml
+++ b/app/src/main/res/layout/layout_bubble.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@drawable/ic_launcher_background"
-    android:padding="20dp">
-    <!-- Bubble Icon or Image -->
-        <ImageView
-            android:id="@+id/bubbleImage"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/your_bubble_icon" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
 
         <!-- Main 화면으로 돌아가기 버튼 -->
-        <Button
-            android:id="@+id/btnGoToMain"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:text="Main으로 돌아가기" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_zero"
+        android:layout_width="225dp"
+        android:layout_height="236dp"
+        android:layout_margin="10dp"
+        android:backgroundTint="@color/purple_200"
+        app:cardCornerRadius="15dp">
 
-        <!-- 도움말 이미지 생성 버튼 (기능은 나중에 추가) -->
-        <Button
-            android:id="@+id/btnHelpImage"
-            android:layout_width="180dp"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="도움말 이미지 생성" />
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/bubbleImage"
+                android:layout_width="66dp"
+                android:layout_height="66dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/your_bubble_icon" />
+
+            <Button
+                android:id="@+id/btnGoToMain"
+                android:layout_width="180dp"
+                android:layout_height="60dp"
+                android:layout_margin="10dp"
+                android:text="Main으로 돌아가기"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/btnHelpImage"
+                android:layout_width="180dp"
+                android:layout_height="60dp"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="도움말 이미지 생성" />
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
 
 
 </LinearLayout>
