--- a/app/src/main/res/layout/layout_bubble.xml
+++ b/app/src/main/res/layout/layout_bubble.xml
@@ -1,54 +1,71 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/backview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-        <!-- Main 화면으로 돌아가기 버튼 -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_zero"
-        android:layout_width="225dp"
-        android:layout_height="236dp"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/purple_200"
+        android:layout_width="250dp"
+        android:layout_height="245dp"
+        app:cardBackgroundColor="@color/purple_200"
         app:cardCornerRadius="15dp">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/bubbleImage"
-                android:layout_width="66dp"
-                android:layout_height="66dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/your_bubble_icon" />
+            <LinearLayout
+                android:id="@+id/linear_layout_one"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btnGoToMain"
-                android:layout_width="180dp"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:text="Main으로 돌아가기"
-                android:layout_weight="1"/>
+                <ImageView
+                    android:id="@+id/bubbleImage"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/your_bubble_icon"/>
 
-            <Button
-                android:id="@+id/btnHelpImage"
-                android:layout_width="180dp"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:text="도움말 이미지 생성" />
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"/>
 
+                <ImageView
+                    android:id="@+id/exit"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/xicon"/>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/btnGoToMain"
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:text="Main으로 돌아가기"/>
+
+                <Button
+                    android:id="@+id/btnHelpImage"
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:text="도움말 이미지 생성"/>
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
