--- a/app/src/main/res/layout/activity_naver_functions.xml
+++ b/app/src/main/res/layout/activity_naver_functions.xml
@@ -93,7 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="175dp"
             android:layout_weight="1"
-            android:text="더보기" />
+            android:text="더보기네이버" />
 
     </LinearLayout>
 
