--- a/app/src/main/res/layout/layout_bubble.xml
+++ b/app/src/main/res/layout/layout_bubble.xml
@@ -11,7 +11,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_zero"
         android:layout_width="250dp"
-        android:layout_height="245dp"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/purple_200"
         app:cardCornerRadius="15dp">
 
@@ -61,6 +61,13 @@
 
                 <Button
                     android:id="@+id/btnHelpImage"
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:text="도움말 이미지 생성"/>
+
+                <Button
+                    android:id="@+id/btnFromStart"
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:layout_margin="10dp"
