0910 - 최근 사용한 기능 구현

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,9 @@
 
     <ImageView
         android:id="@+id/splash_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/splash" />
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/appicon_2" />
     <!-- ADD SPLASH ART -->
 
 
