--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,22 @@
         <Button
             android:id="@+id/btnfavor"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="최근 사용한 기능" />
+            android:backgroundTint="#BEE1FD"
+            android:text="최근 사용한 기능"
+            android:textColor="#000000"
+            android:textSize="22sp" />
 
         <Button
             android:id="@+id/btnsearch"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="검색하기" />
+            android:backgroundTint="#BEE1FD"
+            android:text="검색하기"
+            android:textColor="#000000"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <!-- 두 번째 행 -->
@@ -39,16 +45,24 @@
         <Button
             android:id="@+id/btnkakao"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="카카오톡" />
+            android:backgroundTint="#BEE1FD"
+            android:text="카카오톡"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            tools:textSize="24sp" />
 
         <Button
             android:id="@+id/btnnaver"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="네이버" />
+            android:backgroundTint="#BEE1FD"
+            android:text="네이버"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            tools:textSize="24sp" />
     </LinearLayout>
 
     <!-- 세 번째 행 -->
@@ -61,16 +75,24 @@
         <Button
             android:id="@+id/btndelivery"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="배달의 민족" />
+            android:backgroundTint="#BEE1FD"
+            android:text="배달의 민족"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="normal"
+            tools:textSize="24sp" />
 
         <Button
             android:id="@+id/btnyoutube"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="유튜브" />
+            android:backgroundTint="#BEE1FD"
+            android:text="유튜브"
+            android:textColor="#000000"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <!-- 네 번째 행 -->
@@ -83,16 +105,22 @@
         <Button
             android:id="@+id/btndaum"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="다음" />
+            android:backgroundTint="#BEE1FD"
+            android:text="다음"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/btnetc"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="170dp"
             android:layout_weight="1"
-            android:text="더보기메인" />
+            android:backgroundTint="#BEE1FD"
+            android:text="더보기메인"
+            android:textColor="#000000"
+            android:textSize="24sp" />
     </LinearLayout>
 
 </LinearLayout>
