--- a/app/src/main/res/layout/layout_bubble.xml
+++ b/app/src/main/res/layout/layout_bubble.xml
@@ -12,7 +12,7 @@
         android:id="@+id/card_view_zero"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/purple_200"
+        app:cardBackgroundColor="#61EADD"
         app:cardCornerRadius="15dp">
 
         <LinearLayout
@@ -31,19 +31,19 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_margin="10dp"
-                    android:src="@drawable/your_bubble_icon"/>
+                    android:src="@drawable/your_bubble_icon" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <ImageView
                     android:id="@+id/exit"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
-                    android:src="@drawable/xicon"/>
+                    android:src="@drawable/xicon" />
 
             </LinearLayout>
 
@@ -57,14 +57,14 @@
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:layout_margin="10dp"
-                    android:text="Main으로 돌아가기"/>
+                    android:text="Main으로 돌아가기" />
 
                 <Button
                     android:id="@+id/btnHelpImage"
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:layout_margin="10dp"
-                    android:text="도움말 이미지 생성"/>
+                    android:text="도움말 이미지 생성" />
 
             </LinearLayout>
         </LinearLayout>
